[metadata]
license_file = LICENSE.md

[build_sphinx]
source-dir = doc
all-files = 1
builder = html

[tool:pytest]
addopts = -vrxs

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/psp/_version.py
versionfile_build  = psp/_version.py
tag_prefix = 

